--- a/web/css/style.css
+++ b/web/css/style.css
@@ -65,7 +65,10 @@ h1, h2, h3, h4, h5, h6, p, input {
 }
 .bu-scrollbtn {
   padding: 0px;
-  background-color: rgba(0, 0, 0, 0.144)
+  background-color: rgba(0, 0, 0, 0.144);
+  border-radius: 5px;
+  box-shadow: none;
+  border: 0;
 }
 .bu-scrollbtn:hover {
   background-color: rgba(41, 41, 41, 0.473);
