Added drag behavior and disabled for mobile viewers

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -18,9 +18,7 @@ h1, h2, h3, h4, h5, h6, p, input {
 .bg-secondary {
   background-color: transparent !important;
 }
-#bu-new-titles{
-  background-color: transparent !important;
-}
+
 #bu-outer-carousel {
   height: 230px;
   padding: 0px;
@@ -38,6 +36,13 @@ h1, h2, h3, h4, h5, h6, p, input {
 .bu-book {
   float: left;
   padding: 15px 2px 15px 2px;
+}
+.bu-book a {
+  display: inline-block;
+  height: 200px;
+  -webkit-user-select: none;
+  -ms-user-select: none; 
+  user-select: none; 
 }
 .bu-book-img:hover {
   scale: 110%;
@@ -95,6 +100,9 @@ h1, h2, h3, h4, h5, h6, p, input {
   width: fit-content;
   top: 230px;
   border-radius: 5px;
+  -webkit-user-select: none;
+  -ms-user-select: none; 
+  user-select: none; 
 }
 
 
